--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "sites/all/modules/etype_jailbirds"]
 	path = sites/all/modules/etype_jailbirds
 	url = git@github.com:etype-services/etype_jailbirds.git
+[submodule "sites/all/modules/etype"]
+	path = sites/all/modules/etype
+	url = git@github.com:etype-services/etype.git
