--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "sites/all/modules/etype"]
 	path = sites/all/modules/etype
 	url = git@github.com:etype-services/etype.git
+[submodule "all/modules/premium_content"]
+    path = all/modules/premium_content
+    url = git@github.com:etype-services/premium_content.git
